--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.vscode/
+# Docker
+/docker/
+docker-compose.override.yml
+
+# Mac system files
+*.log
+Thumbs.db
 
 # dependencies
 /node_modules
